[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/background/space_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/background/moon_background.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font/GravityBold8.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/start.gd" type="Script" id=4]
[ext_resource path="res://assets/buttons/pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/buttons/default.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/buttons/hover.tres" type="StyleBox" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.262745, 0.266667, 0.270588, 0.529412 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.85098, 0.427451, 0.113725, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 5
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Moon" parent="." instance=ExtResource( 2 )]

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.0
margin_top = -121.0
margin_right = 222.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -245.5, -87 )
custom_styles/panel = SubResource( 1 )

[node name="Name" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -203.5
margin_top = 21.0
margin_right = 208.5
margin_bottom = 53.0
custom_colors/font_color = Color( 0.85098, 0.427451, 0.113725, 1 )
custom_fonts/font = SubResource( 2 )
text = "Asteroid Runner"
uppercase = true

[node name="PlayButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.5
margin_top = -104.0
margin_right = 69.5
margin_bottom = -70.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
text = "Play"

[node name="QuickPlayButton" type="Button" parent="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.5
margin_top = -56.0
margin_right = 70.5
margin_bottom = -22.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
text = "Quick Play"

[connection signal="pressed" from="Panel/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Panel/QuickPlayButton" to="." method="_on_QuickPlayButton_pressed"]
